--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,10 @@ jobs:
           distribution: 'zulu'
           java-version: '11'
 
+      # gradleコマンドに実行権限を付与
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
       # 依存関係の出力
       - name: Displays the Android dependencies of the project
         run: ./gradlew androidDependencies
