feature #5 変更がmdとyamlだけの場合はgithub actionを起動しない

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,9 +4,15 @@ on:
     branches:
       - main
       - develop
+    paths-ignore:
+      - '**.md'
+      - '**.yaml'
   pull_request:
     branches:
       - develop
+    paths-ignore:
+      - '**.md'
+      - '**.yaml'
 jobs:
   build:
     runs-on: ubuntu-latest
